# graviton

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
csrc/: extension.mm
csrc/metal/: ternary_gemm.metal
examples/: benchmark_compression.py  benchmark_extreme.py
graviton/: __init__.py
graviton/api/: __init__.py  __main__.py  server.py
graviton/cli/: __init__.py  main.py
graviton/core/: __init__.py  config.py  engine.py  hardware.py
graviton/decoding/: __init__.py  sampling.py  speculative.py
graviton/memory/: __init__.py  cache.py  manager.py  mmap_loader.py  streaming.py
graviton/models/: __init__.py  attention.py  bitnet_causal_lm.py  graviton_model.py  loader.py  moe_causal_lm.py  omega_causal_lm.py  transformer.py
graviton/quantization/: __init__.py  base.py  calibration.py  linear.py  mixed_precision.py  quantized_linear.py  ternary.py
graviton/sparsity/: __init__.py  moe.py  pruning.py  topk.py
scripts/: test_api_chat.py
tests/: test_attention.py  test_config.py  test_decoding.py  test_engine.py  test_memory.py  test_mixed_precision.py  test_model.py  test_quantization.py  test_quantized_linear.py  test_sparsity.py  test_transformer.py
