[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graviton-ai"
version = "0.1.0"
description = "Ultra-efficient AI inference engine — run massive models on minimal hardware"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Graviton Contributors"},
]
keywords = [
    "ai", "inference", "quantization", "compression",
    "llm", "transformer", "efficient", "optimization",
    "apple-silicon", "ternary", "sparsity",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "safetensors>=0.3.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
huggingface = [
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "huggingface-hub>=0.16.0",
    "sentencepiece>=0.1.99",
]
all = [
    "graviton-ai[dev,huggingface]",
]

[project.scripts]
graviton = "graviton.cli.main:main"

[project.urls]
Homepage = "https://github.com/fatihturker/graviton"
Repository = "https://github.com/fatihturker/graviton"
Issues = "https://github.com/fatihturker/graviton/issues"

[tool.setuptools.packages.find]
include = ["graviton*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
