[build-system]
requires = ["setuptools>=68.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graviton-ai"
version = "0.1.0"
description = "Open-source AI inference engine — run 70B+ parameter LLMs on consumer hardware with streaming layer-by-layer quantization"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Graviton Contributors"},
]
keywords = [
    "ai", "inference", "quantization", "compression",
    "llm", "transformer", "efficient", "optimization",
    "apple-silicon", "ternary", "sparsity",
    "streaming-loading", "layer-by-layer", "70b-model",
    "consumer-hardware", "local-llm", "democratize-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "safetensors>=0.3.0",
    "tqdm>=4.65.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
huggingface = [
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "huggingface-hub>=0.16.0",
    "sentencepiece>=0.1.99",
]
api = [
    "graviton-ai[huggingface]",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
]
all = [
    "graviton-ai[dev,huggingface,api]",
]

[project.scripts]
graviton = "graviton.cli.main:main"
graviton-api = "graviton.api.__main__:main"

[project.urls]
Homepage = "https://opengraviton.github.io"
Repository = "https://github.com/opengraviton/graviton"
Issues = "https://github.com/opengraviton/graviton/issues"

[tool.setuptools.packages.find]
include = ["graviton*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
